# lunatic

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: engine.rs  evaluator.rs  interface.rs  lib.rs  moves.rs  oracle.rs  table.rs  time.rs
engine/src/evaluation/: mod.rs  standard.rs
engine/src/search/: game_helpers.rs  mod.rs  search_defs.rs
lichess/: Cargo.toml
lichess/src/: api.rs  main.rs
uci/: Cargo.toml
uci/src/: bench.rs  main.rs
