[package]
name = "lunatic-lichess"
version = "0.1.0"
authors = ["analog-hors <analog-hors+analog-hors@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3"
lunatic = { path = "../engine" }
reqwest = { version = "0.10.6", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2.21", features = ["macros"] }
futures-util = "0.3.5"
rand = "0.8.3"

[dependencies.chess-polyglot-reader]
git = "https://github.com/analog-hors/chess-polyglot-reader"
rev = "4f13c74"
features = ["chess_lib_helpers"]
