[package]
name = "lunatic-uci"
version = "0.1.0"
authors = ["analog-hors <44050761+analog-hors@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.1"
lunatic = { path = "../engine" }
vampirc-uci = { version = "0.11", features = ["chess"] }
futures = "0.3.8"
